lab3 done